test/src/e2e_vm_tests/test_programs/should_fail/payable_attribute_missing_in_implementation/src/main.sw
contract;

abi MyContract {
    #[payable]
    fn payable();
}

impl MyContract for Contract {
    // missing #[payable] attribute
    fn payable() {
    }
}
